--- a/src/main/resources/templates/watchlist.html
+++ b/src/main/resources/templates/watchlist.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -11,34 +12,32 @@
 
 <body>
 	<div class="container">
- 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href = "">Watchlist App</a>
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
-               data-target = "#navbarSupportedContent" 
-               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
-               aria-label = "Toggle navigation">
-               
-               <span class = "navbar-toggler-icon"></span>
+ 		<nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+            <a class="navbar-brand" href="">Watchlist App</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" 
+               data-target="#navbarSupportedContent" 
+               aria-controls="navbarSupportedContent" aria-expanded="false" 
+               aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
-               <ul class = "navbar-nav mr-auto">
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "">Home</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                     <a class="nav-link" href="/">Home</a>
                   </li>
-                  <li class = "nav-item active">
-                     <a class = "nav-link" href = "watchlist">Watchlist</a>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="watchlist">Watchlist</a>
                   </li>
-                  <li class = "nav-item ">
-                     <a class = "nav-link" href = "watchlistItemForm">Submit an item</a>
+                  <li class="nav-item">
+                     <a class="nav-link" href="watchlistItemForm">Submit an item</a>
                   </li>
                </ul>
-               
             </div>
       	</nav> 
-		<h2  class = "mt-4">Watchlist</h2>
+		<h2 class="mt-4">Watchlist</h2>
 		<table class="table">
-			<thead class = "thead-light">
+			<thead class="thead-light">
 		        <tr>
 		            <th class="text-left">Title</th>
 		            <th class="text-left">Rating</th>
@@ -53,20 +52,21 @@
 		            <td th:text="${movierow.rating}">7.8</td>
 		            <td th:text="${movierow.priority}">LOW</td>
 		            <td th:text="${movierow.comment}">Peter recommended</td>
-					<td><a href="#" class="btn btn-info" role="button" th:href="@{/watchlistItemForm(id=${movierow.id})}">Update</a></td>
+					<td>
+						<a href="#" class="btn btn-info" role="button" th:href="@{/watchlistItemForm(id=${movierow.id})}">Update</a>
+						<a href="#" class="btn btn-danger" role="button" th:href="@{/deleteItem(id=${movierow.id})}">Delete</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 		<hr/>
-		<div >
-			<div>Number of movies to watch: <span th:text="${noofmovies}"> </div>	 
+		<div>
+			<div>Number of movies to watch: <span th:text="${noofmovies}"></span></div>	 
 		</div>
-		
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
 </body>
 </html>
