--- a/src/main/resources/templates/watchlistItemForm.html
+++ b/src/main/resources/templates/watchlistItemForm.html
@@ -38,7 +38,7 @@
             <!-- Form levels error messages here -->
             <div class = "form-group row ">
                <div class="col-sm-8">
-        			<span class="text-danger" > </span>      
+        			<span class="text-danger" th:text="${errorMessage}" > </span>      
       			</div>
             </div>
             <div class = "form-group row ">
